# TREX

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  rust-toolchain.toml  shell.nix
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: check.yml
docker/: prebuild.Dockerfile
docs/: rust-setup.md
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  command.rs  command_helper.rs  main.rs  rpc.rs  service.rs
pallets/tee/: Cargo.toml  README.md
pallets/tee/ias-verify/: Cargo.toml
pallets/tee/ias-verify/src/: lib.rs
pallets/tee/src/: benchmarking.rs  lib.rs  mock.rs  traits.rs
pallets/tee/src/rpc/: Cargo.toml
pallets/tee/src/rpc/runtime-api/: Cargo.toml
pallets/tee/src/rpc/runtime-api/src/: lib.rs
pallets/tee/src/rpc/src/: lib.rs
pallets/tee/src/tests/: skip_ias_check_tests.rs  test_cases.rs
pallets/tee/test-utils/: Cargo.toml
pallets/tee/test-utils/src/: ias.rs
pallets/template/: Cargo.toml
pallets/trex/: Cargo.toml  README.md
pallets/trex/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/trex/test-trex-utils/: Cargo.toml
pallets/trex/test-trex-utils/src/: lib.rs
primitives/benchmarking/: Cargo.toml
primitives/benchmarking/src/: lib.rs
primitives/tee/: Cargo.toml
primitives/tee/src/: lib.rs
primitives/trex/: Cargo.toml
primitives/trex/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: docker_run.sh
