[package]
name = "test-utils"
description = "A crate for common utilities for tests"
version = "0.1.0"
authors = ["NexToken Tech LLC <team@trex.ink>"]
homepage = "https://trex.ink"
repository = "https://github.com/NexTokenTech/TREX"
license = "Apache-2.0"
edition = "2021"

[dependencies]
hex-literal = { version = "0.3.2" }
log = { version = "0.4.14", default-features = false }

[dependencies.tee-primitives]
default-features = false
package = "tee-primitives"
path = "../../../primitives/tee"


[features]
default = ['std']
std = [
    "log/std",
    "tee-primitives/std",
]
