[package]
name = "pallet-tee-rpc"
description = ""
version = "1.0.0"
authors = ["NexToken Tech LLC <team@trex.ink>"]
homepage = "https://trex.ink"
repository = "https://github.com/NexTokenTech/TREX"
license = "Apache-2.0"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
    "derive",
] }

jsonrpsee = { version = "0.15.1", features = ["server", "macros"] }


# Substrate packages

sp-api = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-blockchain = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-runtime = { default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }

# local packages
pallet-tee-runtime-api = { path = "./runtime-api", default-features = false }
tee-primitives = { path = "../../../../primitives/tee", default-features = false }

[features]
default = ["std"]
std = [
    "sp-api/std",
    "sp-runtime/std",
    "pallet-tee-runtime-api/std",
    "tee-primitives/std",
]